Update copyright statements

--- a/src/components/play_list_scrollable_table.scss
+++ b/src/components/play_list_scrollable_table.scss
@@ -1,8 +1,23 @@
 /*
-  Reference: https://www.w3docs.com/snippets/html/how-to-create-a-table-with-a-fixed-header-and-scrollable-body.html
-  Example of creating a table with a scrollable body by using
-  the display property (the second example).
-  This article was the starting point for a scrollable table with fixed header.
+    AgentMPDFRB - web app for controlling an mpd instance
+    Copyright © 2022  Dave Hocker (email: AtHomeX10@gmail.com)
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, version 3 of the License.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+    See the LICENSE file for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program (the LICENSE file).  If not, see <http://www.gnu.org/licenses/>.
+
+    Reference: https://www.w3docs.com/snippets/html/how-to-create-a-table-with-a-fixed-header-and-scrollable-body.html
+    Example of creating a table with a scrollable body by using
+    the display property (the second example).
+    This article was the starting point for a scrollable table with fixed header.
 */
 
 .fixed_header {
